<resources>
    <string name="app_name">Whats Color</string>
    <string name="gameover">GAME OVER</string>
    <string name="score">SCORE</string>
    <string name="high_score">HIGH SCORE</string>
    <string name="share_description">Share your score</string>
    <string name="show_ranking">See your Rank</string>
    <string name="change_sound_volume">Turn on/off sound</string>
    <string name="menu_description">back to home</string>
    <string name="start_game_des">Start The Game</string>
    <string name="continue_">Continue</string>
    <string name="back_">Back</string>
    <string name="answer_02">Answer 02</string>
    <string name="answer_01">Answer 01</string>
    <string name="pause_game">Pause Game</string>
    <string name="pref_change_sound">pref_change_sound</string>
    <string name="pref_high_score">pref_high_score</string>
    <string name="GAMEPLAY_CONTENT">SEND_GAMEPLAY</string>
    <string name="DefaultTimeCountDown">04:00</string>
    <string name="signin_other_error">Some thing error while signin</string>

       Copyright (C) 2013 Google Inc.

       Licensed under the Apache License, Version 2.0 (the "License");
       you may not use this file except in compliance with the License.
       You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

       Unless required by applicable law or agreed to in writing, software
       distributed under the License is distributed on an "AS IS" BASIS,
       WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
       See the License for the specific language governing permissions and
       limitations under the License.
    -->

        <string name="game_title">Button Clicker 2000!</string>
        <string name="game_blurb">A sample game that tests your ability to click a button. Can you click faster than your friends? Only one way to find out! To play this game with friends, you must sign in with Google.</string>
        <string name="single_player">Single Player</string>
        <string name="single_player_explanation">Get some practice!</string>
        <string name="quick_game">Quick game</string>
        <string name="invite_players">Invite friends</string>
        <string name="see_invitations">See invitations</string>
        <string name="quick_game_explanation">Challenge a random opponent.</string>
        <string name="invite_players_explanation">Invite friends to play a game.</string>
        <string name="see_invitations_explanation">See who is inviting you right now.</string>
        <string name="inv_popup_text">Incoming invitation!</string>
        <string name="accept_popup_invite">Accept!</string>
        <string name="sign_out">Sign Out</string>
        <string name="please_wait">Please wait&#8230;</string>
        <string name="instructions">Click the button as fast as you can!</string>
        <string name="game_problem">An error occurred while starting the game. Please try again.</string>
        <string name="click_me">Click me!</string>
        <string name="is_inviting_you">is challenging you to a game!</string>
        <string name="status_exception_error">%1$s (status %2$d). %3$s.</string>

        <string name="status_multiplayer_error_not_trusted_tester">Anyone you invite must be a trusted tester</string>
        <string name="match_error_already_rematched">This rematch has already been started!</string>
        <string name="client_reconnect_required">Games client reconnect required</string>
        <string name="network_error_operation_failed">Network error: Operation failed</string>
        <string name="internal_error">Internal error</string>
        <string name="unexpected_status">Unexpected status: %1$s</string>
        <string name="match_error_inactive_match">This match is inactive.</string>
        <string name='match_error_locally_modified'>This match has locally-modified data.  This operation cannot be performed until the match is sent to the server.</string>
        <string name="score_label">%1$s - Me</string>


</resources>
