<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="game.fastanswer.StartActivity">


    <ImageView
        android:paddingTop="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:contentDescription="@string/start_game_des"
        android:onClick="StartNewGame"
        android:src="@drawable/logo" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:contentDescription="@string/start_game_des"
        android:onClick="StartNewGame"
        android:tint="@color/tint_icon"
        android:src="@drawable/ic_start" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="30dp"
        android:paddingLeft="80dp"
        android:paddingRight="80dp">

        <ImageView
            android:id="@+id/signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/share_description"
            android:onClick="ShareGameEvent"
            android:tint="@color/tint_icon"
            android:src="@drawable/ic_share" />

        <ImageView
            android:id="@+id/button_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:contentDescription="@string/change_sound_volume"
            android:onClick="ChangeSoundEvent"
            android:tint="@color/tint_icon"
            android:src="@drawable/ic_sound" />
    </RelativeLayout>
</RelativeLayout>
