<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">

            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/button_rank"
                    android:padding="5dp"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:contentDescription="@string/show_ranking"
                    android:src="@drawable/ic_rank"
                    android:tint="@color/tint_icon" />

                <TextView
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="12sp"
                    android:text="@string/show_ranking"/>
            </LinearLayout>


            <LinearLayout

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp">

                <ImageView
                    android:id="@+id/button_sound"
                    android:padding="5dp"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:contentDescription="@string/change_sound_volume"
                    android:src="@drawable/ic_sound"
                    android:tint="@color/tint_icon" />

                <TextView
                    android:padding="5dp"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="12sp"
                    android:text="@string/change_sound_volume"/>
            </LinearLayout>


            <LinearLayout

                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/button_share"
                    android:padding="5dp"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:contentDescription="@string/share_description"
                    android:src="@drawable/ic_share"
                    android:tint="@color/tint_icon" />

                <TextView
                    android:gravity="center"
                    android:padding="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="12sp"
                    android:text="@string/share_description"/>
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>