<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="game.fastanswer.MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:id="@+id/rl_progress_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <RelativeLayout
                android:id="@+id/layout_progress_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <com.akexorcist.roundcornerprogressbar.IconRoundCornerProgressBar
                    android:id="@+id/progress_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    app:rcIconPadding="8dp"
                    app:rcIconSize="50dp"
                    app:rcRadius="10dp" />

                <TextView
                    android:id="@+id/text_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/DefaultTimeCountDown"
                    android:textColor="@color/white"
                    android:textSize="@dimen/answer_text_size"
                    android:textStyle="bold" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/rl_answer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/padding_dialog_range_left">

                <RelativeLayout
                    android:id="@+id/rl_answer_start"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <RelativeLayout
                        android:id="@+id/Answer01"
                        android:layout_width="@dimen/button_choose_answer_size"
                        android:layout_height="@dimen/button_choose_answer_size"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/answer"
                        android:onClick="Answer01">

                        <TextView
                            android:id="@+id/text_answer01"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:gravity="center"
                            android:text="@string/answer_01"
                            android:textSize="@dimen/answer_text_size" />
                    </RelativeLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">


                    <RelativeLayout
                        android:id="@+id/Answer02"
                        android:layout_width="@dimen/button_choose_answer_size"
                        android:layout_height="@dimen/button_choose_answer_size"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/answer"
                        android:onClick="Answer02">


                        <TextView
                            android:id="@+id/text_answer02"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:gravity="center"
                            android:text="@string/answer_02"
                            android:textSize="@dimen/answer_text_size" />
                    </RelativeLayout>
                </RelativeLayout>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/include_question_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/rl_answer"
                android:layout_below="@+id/layout_progress_2">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerInParent="true">

                    <include layout="@layout/question_main" />

                </FrameLayout>
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <!--<RelativeLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:background="@drawable/background">-->

    <!--<ProgressBar-->
    <!--android:layout_centerInParent="true"-->
    <!--android:id="@+id/loading_game"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center" />-->
    <!--</RelativeLayout>-->

</RelativeLayout>
